--- a/Quality.html
+++ b/Quality.html
@@ -1,157 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <title>Our Story | Zuvia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Base + Page CSS -->
   <link rel="stylesheet" href="base.css">
-<link rel="stylesheet" href="quality.css">
-
-
-
-  <meta charset="UTF-8">
-  <title>Zuvia Quality Process</title>
-  
+  <link rel="stylesheet" href="ourstory.css">
 </head>
-<body class="quality-page">
 
-<!-- HEADER (same as other pages) -->
+<body class="story-page">
+
+<!-- HEADER (same structure, no CSS conflict) -->
 <header class="site-header">
   <div class="header-container">
 
     <div class="logo">
-      <img src="zuvia-logo.png" alt="Zuvia">
+      <img src="images/zuvia-logo.png" alt="Zuvia">
     </div>
 
     <nav class="nav-links">
       <a href="zuvia.html">Home</a>
       <a href="about.html">About</a>
-      <a href="quality.html" class="active">Quality</a>
-      <a href="Distributorship.html">Distributorship</a>
+      <a href="our-story.html" class="active">Our Story</a>
+      <a href="quality.html">Quality</a>
+      <a href="distributorship.html">Distributorship</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <div class="header-actions">
-      <a href="Distributorship.html" class="btn-outline">Apply Dealership</a>
+      <a href="distributorship.html" class="btn-outline">Apply Dealership</a>
       <a href="contact.html" class="btn-solid">Order / Enquiry</a>
     </div>
 
   </div>
 </header>
 
-<!-- QUALITY SECTION -->
-<section class="quality-wrapper">
+<!-- HERO STORY -->
+<section class="story-hero">
+  <div class="story-container">
 
-  <h1 class="quality-title">7-Stage Purification Process</h1>
-
-  <p class="quality-intro">
-    Every drop of Zuvia packaged drinking water undergoes a rigorous
-    7-stage purification process to ensure purity, safety, and
-    balanced mineral content in every sip.
-  </p>
-
-  <div class="quality-steps">
-
-    <div class="quality-step">
-      <h3>1. Source Water</h3>
-      <p>Collected from protected underground water sources.</p>
-    </div>
-
-    <div class="quality-step">
-      <h3>2. Sand Filtration</h3>
-      <p>Removes large particles and suspended impurities.</p>
-    </div>
-
-    <div class="quality-step">
-      <h3>3. Carbon Filtration</h3>
-      <p>Eliminates chlorine, odor, and organic contaminants.</p>
-    </div>
-
-    <div class="quality-step">
-      <h3>4. Reverse Osmosis (RO)</h3>
-      <p>Removes dissolved salts, heavy metals, and harmful substances.</p>
-    </div>
-
-    <div class="quality-step">
-      <h3>5. UV Purification</h3>
-      <p>Destroys bacteria, viruses, and harmful microorganisms.</p>
-    </div>
-
-    <div class="quality-step">
-      <h3>6. Ozonation</h3>
-      <p>Provides additional disinfection and freshness.</p>
-    </div>
-
-    <div class="quality-step">
-      <h3>7. Mineralization</h3>
-      <p>Adds essential minerals to enhance taste and health benefits.</p>
-    </div>
+    <h1>Our Story</h1>
+    <p class="story-tagline">
+      Pure water is not a luxury. It is a responsibility.
+    </p>
 
   </div>
-
 </section>
 
-<!-- FOOTER (same as other pages) -->
-<footer class="footer">
-  <div class="footer-container">
+<!-- STORY CONTENT -->
+<section class="story-content">
+  <div class="story-container">
 
-    <!-- LEFT : BRAND -->
-    <div class="footer-brand">
-      <div class="brand-logo">
-        <span>Z</span>
-        <h3>Zuvia</h3>
+    <div class="story-block">
+      <h2>The Beginning</h2>
+      <p>
+        Zuvia began with a simple question — why should people compromise on
+        something they consume every day? Inconsistent quality, unclear sourcing,
+        and unreliable standards inspired us to build a better system.
+      </p>
+    </div>
+
+    <div class="story-block">
+      <h2>Built on Purity</h2>
+      <p>
+        Every Zuvia bottle goes through a rigorous multi-stage purification process.
+        Our focus is not just clarity, but safety, mineral balance, and consistency.
+      </p>
+    </div>
+
+    <div class="story-block">
+      <h2>Consistency You Can Trust</h2>
+      <p>
+        Taste should never vary. Quality should never fluctuate.
+        Zuvia ensures the same standard in every bottle — every batch, every day.
+      </p>
+    </div>
+
+    <div class="story-block">
+      <h2>Responsibility Beyond Water</h2>
+      <p>
+        We care for more than hydration. Our operations focus on optimized packaging,
+        hygiene-first infrastructure, and sustainable practices wherever possible.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!-- TIMELINE -->
+<section class="story-timeline">
+  <div class="story-container">
+
+    <h2 class="timeline-title">Our Journey</h2>
+
+    <div class="timeline">
+
+      <div class="timeline-item">
+        <span class="timeline-year">2023</span>
+        <p>Conceptualization of Zuvia with a vision for consistent purity</p>
       </div>
 
-      <p>
-        Zuvia provides safe, great-tasting packaged drinking water
-        with transparent quality processes and reliable delivery.
-      </p>
+      <div class="timeline-item">
+        <span class="timeline-year">2024</span>
+        <p>Infrastructure setup, purification systems & quality protocols</p>
+      </div>
 
-      <h4>Connect</h4>
-      <ul class="connect-links">
-        <li><a href="mailto:info@zuviawater.com">Email us</a></li>
-        <li><a href="https://www.instagram.com/zuviawater/" target="_blank">Instagram</a></li>
-      </ul>
+      <div class="timeline-item">
+        <span class="timeline-year">2025</span>
+        <p>Launch of Zuvia packaged drinking water across multiple pack sizes</p>
+      </div>
 
-      <a href="Distributorship.html" class="dealership-btn">Apply Dealership</a>
-    </div>
+      <div class="timeline-item">
+        <span class="timeline-year">Future</span>
+        <p>Expanding distribution, partnerships, and sustainable initiatives</p>
+      </div>
 
-    <!-- MIDDLE : QUICK LINKS -->
-    <div class="footer-links">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="our-story.html">Our Story</a></li>
-        <li><a href="quality.html">Quality Process</a></li>
-        <li><a href="Distributorship.html">Distributorship</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </div>
-
-    <!-- RIGHT : ABOUT -->
-    <div class="footer-links">
-      <h4>About</h4>
-      <ul>
-        <li><a href="our-story.html">Our Story</a></li>
-        <li><a href="quality.html">Quality Process</a></li>
-        <li><a href="Distributorship.html">Distributorship</a></li>
-      </ul>
     </div>
 
   </div>
+</section>
 
-  <!-- BOTTOM BAR -->
-  <div class="footer-bottom">
-    <p>© Zuvia Packaged Drinking Water. All rights reserved.</p>
-  </div>
+<!-- BRAND LINE -->
+<section class="story-brandline">
+  <p>Pure. Sustainable. Yours.</p>
+</section>
 
-  <!-- WHATSAPP BUTTON -->
-  <a
-    href="https://wa.me/919220632019"
-    class="whatsapp-btn"
-    target="_blank"
-  >
-    WhatsApp us
-  </a>
-
-</footer>
-
+<!-- FOOTER (reuse existing footer HTML if needed) -->
 
 </body>
 </html>
