--- a/distributorship.html
+++ b/distributorship.html
@@ -25,12 +25,14 @@
 
     <!-- NAV LINKS -->
    <nav class="nav-links">
-  <a href="zuvia.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="products.html">Products</a>
+
+ <a href="index.html#products">Products</a>
   <a href="quality.html">Quality</a>
   <a href="Distributorship.html">Distributorship</a>
   <a href="contact.html">Contact</a>
+   <section id="products"></section>
 </nav>
 
 
