Refactor contact.html structure and links

--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
 
     <!-- NAV LINKS -->
    <nav class="nav-links">
-  <a href="zuvia.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="products.html">Products</a>
-  <a href="quality.html">Quality</a>
+ <a href="index.html#products">Products</a>
+   <a href="quality.html">Quality</a>
   <a href="Distributorship.html">Distributorship</a>
   <a href="contact.html">Contact</a>
 </nav>
@@ -41,7 +41,7 @@
 
     <!-- CTA BUTTONS -->
     <div class="header-actions">
-      <a href="dealership.html" class="btn-outline">Apply Dealership</a>
+      <a href="distributorship.html" class="btn-outline">Apply Dealership</a>
       <a href="contact.html" class="btn-solid">Order / Enquiry</a>
     </div>
 
