Fix HTML formatting and update navigation links

--- a/about.html
+++ b/about.html
@@ -20,15 +20,17 @@
 
     <!-- NAV LINKS -->
     <nav class="nav-links">
-      <a href="products.html">Products</a>
+
+ <a href="index.html">Home</a>
+       <a href="index.html#products">Products</a>
       <a href="quality.html">Quality</a>
-      <a href="dealership.html">Distributorship</a>
+      <a href="distributorship.html">Distributorship</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <!-- CTA BUTTONS -->
     <div class="header-actions">
-      <a href="dealership.html" class="btn-outline">Apply Dealership</a>
+      <a href="distributorship.html" class="btn-outline">Apply Dealership</a>
       <a href="contact.html" class="btn-solid">Order / Enquiry</a>
     </div>
 
